refactor(admin): 统一方法命名规范并优化集合操作
- 重构Controller/Service层方法命名，采用更清晰的动词+名词结构
- 使用Java 16的toList()替代Collectors.toList()简化代码
- 清理Mapper接口注释，保持简洁统一
- 优化XML映射文件结构，移除冗余注释

Signed-off-by: PIG AI <wangiegie@gmail.com>